# cuteinformer

./: .gitignore  AbstractNotificationWidget.cpp  CMakeLists.txt  FreedesktopNotifications.cpp  FreedesktopNotifications.h  KNotify.cpp  NotificationWidget.cpp  NotificationWidget.h  Settings.cpp  Settings.h  StackManager.cpp  StackManager.h  ThemeManager.cpp  WidgetStack.cpp  WidgetStack.h  abstract_notification_widget.cpp  abstract_notification_widget.h  cuteinformer.pro  dbus_interface.cpp  dbus_interface.h  main.cpp  notification_widget.cpp  notification_widget.h  notify_admin.cpp  notify_admin.h  simple_notification_widget.cpp  simple_notification_widget.h  sources.cmake  stackmanager.cpp  stackmanager.h  stackview.cpp  stackview.h  style.qss  widgetstack.cpp  widgetstack.h
resources/: org.freedesktop.Notifications.service.in
resources/theme/: index.theme
src/: AbstractNotificationWidget.cpp  AbstractNotificationWidget.h  DBusApplicationAdapter.cpp  DBusApplicationAdapter.h  FreedesktopNotifications.cpp  KNotify.h  Settings.cpp  Settings_p.h  ThemeManager.h  main.cpp
theme/: style.qss
